--- a/问卷调查/wwwroot/js/Ueditor/formdesign/setAttr.html
+++ b/问卷调查/wwwroot/js/Ueditor/formdesign/setAttr.html
@@ -10,10 +10,6 @@
     <script type="text/javascript" src="../dialogs/internal.js"></script>
 </head>
 <body>
-
-    <div>
-        是否为父节点<input type='checkbox' id='check_parent' />
-    </div>
     <div>
         <input type='text' placeholder='请输入父节点编号' id='num_index' />
     </div>
@@ -23,43 +19,19 @@
     <div>
         <input type='text' placeholder='请输入组描述信息' id='group_desc' />
     </div>
-    <div>
-        <input type='text' placeholder='请输入子节点编号' id='num_child_index' />
-    </div>
-    <div>
-        <input type='text' placeholder='请输入子点描述信息' id='text_child_desc' />
-    </div>
-    <div>
-        <input type='text' placeholder='请输入子点代码' id='text_child_code' />
-    </div>
-    <div>
-        <input type='text' placeholder='请输入子点文本' id='text_child_value' />
-    </div>
 
     <script type="text/javascript">
         dialog.onok = function () {
             var p_index = $('#num_index').val();
             var p_desc = $('#text_desc').val();
             var group = $('#group_desc').val();
-            var c_index = $('#num_child_index').val();
-            var c_desc = $('#text_child_desc').val();
-            var c_value = $('#text_child_value').val();
             var focusNode = editor.selection.getStart();
-            if ($('#check_parent').is(':checked')) {
-                focusNode.setAttribute('data-parent', '');
-                focusNode.setAttribute('data-desc', '');
-                focusNode.setAttribute('data-group', '');
-                focusNode.setAttribute('data-group', group);
-                focusNode.setAttribute("data-parent", p_index);
-                focusNode.setAttribute('data-desc', p_desc);
-            } else {
-                focusNode.setAttribute('data-child', '');
-                focusNode.setAttribute('data-childdesc', '');
-                focusNode.setAttribute('data-value', '');
-                focusNode.setAttribute("data-child", p_index + '_' + c_index);
-                focusNode.setAttribute('data-childdesc', c_desc);
-                focusNode.setAttribute('data-value', c_value);
-            }
+                focusNode.setAttribute('parent', '');
+                focusNode.setAttribute('desc', '');
+                focusNode.setAttribute('group', '');
+                focusNode.setAttribute('group', group);
+                focusNode.setAttribute("parent", p_index);
+                focusNode.setAttribute('desc', p_desc);
         }
     </script>
 </body>
