--- a/问卷调查/wwwroot/js/Ueditor/formdesign/savehtml.html
+++ b/问卷调查/wwwroot/js/Ueditor/formdesign/savehtml.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
     <title>保存表单</title>
@@ -23,7 +23,7 @@ var content = editor.getContent();
 if(name==''){alert('请输入表单名称');return false;}
 
 $('#div_html').html(content);
-CreateDomId();
+//CreateDomId();
 content = $('#div_html').html();
 
 
